# whisper-app

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  app.py  build.spec  pyproject.toml  requirements.txt
assets/icon/: icon.icns
docs/: Models.md
src/: main.py  settings.py
src/locales/en/: app_en.ts
src/locales/ru/: app_ru.ts
src/static/: models.yaml  presets.yaml  transcriber.yaml
src/transcriber/: __init__.py  audio_processor.py  model_manager.py  schemas.py  transcriber.py
src/ui/: app.py  bg.py
src/ui/elements/labels/: __init__.py  information.py  process_label.py  progress_bar.py
src/ui/elements/selectors/: __init__.py  language.py  models.py  presets.py
src/ui/elements/tables/: __init__.py  audio_files.py  file_list.py  models.py
src/ui/windows/: __init__.py  about.py  models.py  running_task.py
